# robotSim

./: .gitignore  .pre-commit-config.yaml  LOG.md  PROPOSAL.md  README.md  main.py  pyproject.toml
examples/: mvp.yaml
examples/models/: fr3_panda.urdf
examples/models/franka_fr3/: CHANGELOG.md  LICENSE  README.md  fr3.xml  scene.xml
src/robot_validator/: cli.py  robot.py  scenario.py  session.py  visualizer.py  workcell.py
src/robot_validator/controller/: base.py  joint_pos.py
src/robot_validator/validation/: collision.py  kinematics.py
tests/: test_day3.py  test_integration.py  test_mvp.py
