[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-validator"
version = "0.1.0"
description = "Industrial robot validation — verify workcells, trajectories, collisions before deploying to production"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
    "mujoco>=3.0",
    "yourdfpy>=0.0.57",
    "viser>=0.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["mypy", "ruff>=0.4"]

[project.scripts]
robot-validator = "robot_validator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_validator"]

[tool.ruff]
target-version = "py310"
line-length = 100
